# serviceflow-ai

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
automation/n8n/workflows/: customer-notification.json  error-handler.json  service-request-processing.json  sla-reminder.json  technician-notification.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: ai.py  db.py  integrations.py  main.py  models.py  schemas.py  seed.py  services.py
backend/app/core/: config.py  logging.py  security.py
backend/tests/: test_domain.py  test_security.py
docs/: api-examples.md  architecture.md  make-com-scenario.md  security.md  troubleshooting.md
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  main.tsx  styles.css
infrastructure/nginx/: nginx.conf
