[project]
name = "serviceflow-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.35",
  "pydantic-settings>=2.10",
  "email-validator>=2.2",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.16",
  "python-jose[cryptography]>=3.5",
  "argon2-cffi>=25.1",
  "python-multipart>=0.0.20",
  "httpx>=0.28",
  "redis>=6.2",
  "aioboto3>=15.0",
  "structlog>=25.4",
  "orjson>=3.10",
  "tenacity>=9.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.4", "pytest-asyncio>=1.0", "ruff>=0.12", "mypy>=1.16,<2.0", "aiosqlite>=0.21"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
